# RecommendedFrequencies

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
notebooks/: Blog_Post.ipynb  Word2Vec_vs_EveryNoise.ipynb
src/: project_config.py
src/modelling/: baseline.py  config.py  data.py  ml_catboost.py  ml_data.py  utils.py
src/plotly/: main.py
src/plotting/: album_cover_collage.py  config.py  mood_board.py
src/recommended_frequencies/: __init__.py  config.py  utils.py
src/recommended_frequencies/modelling/: __init__.py  catboost.py  config.py  data.py  utils.py
src/recommended_frequencies/plotting/: album_cover_collage.py  config.py  mood_board.py
src/recommended_frequencies/spotify/: __init__.py  config.py  genre_embeddings.py  library.py  main.py  merge_data.py  utils.py
src/recommended_frequencies/streamlit/: config.py  main.py  utils.py
src/spotify/: config.py  data.py  genre_embeddings.py  library.py  main.py  merge_data.py  utils.py
src/streamlit/: config.py  main.py  utils.py
tests/: spotify.py
