[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recommended_frequencies"
authors = [{"name" = "Lucas Chizzali"}]
description = "Recommend songs to add to Spotify playlist."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]
dependencies = [
    "spotipy>=2.19.0rc1,<=2.19.0",
    "pandas~=2.3",
    "numpy~=2.4",
    "beautifulsoup4~=4.11",
    "plotly~=5.10",
    "matplotlib~=3.5",
    "streamlit~=1.11",
    "dash~=2.6",
    "scikit-image~=0.26.0",
    "scikit-learn~=1.1",
    "scipy~=1.9",
    "joblib~=1.1",
    "networkx~=3.5",
    "catboost~=1.2",
    "thefuzz~=0.22.1",
    "loguru~=0.7.3",
    "notebook>=7.5.1",
]

[tool.setuptools.dynamic]
version = {attr = "recommended_frequencies.__version__"}

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "W605",   # pycodestyle: invalid-escape-sequence
    "S102",   # flake8-bandit: exec-builtin
    "INP",    # flake8-no-pep420
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "NPY002", # numpy-legacy-random
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["INP001"]
"[!t][!e][!s][!t][!s]*/**" = ["PT"]
